feat: getting results by practice attempt id